--- a/TH_LTWeb/Views/SachOnline/Index.cshtml
+++ b/TH_LTWeb/Views/SachOnline/Index.cshtml
@@ -17,8 +17,7 @@
         width: 100px;
     }
 </style>
-
-
+<link rel="stylesheet" href="~/CSS/index.css">
 <h2 class="text-center">SÁCH MỚI</h2>
 <hr>
 <div class="row text-center">
