--- a/TH_LTWeb/Views/SachOnline/SachTheoChuDe.cshtml
+++ b/TH_LTWeb/Views/SachOnline/SachTheoChuDe.cshtml
@@ -14,12 +14,12 @@
                      class="img-responsive img-rounded imgbook" />
                 <div class="caption">
                     <h4 style="min-height: 70px;">
-                        <a href="@Url.Action("ChiTietSach","SachOnline", new { id = sach.Id})">
+                        <a href="@Url.Action("ChiTietSach","SachOnline",new {id = sach.Id})">
                             @sach.Name
                         </a>
                     </h4>
                     <p>
-                        <a href="#" class="btn btn-primary" role="button">
+                        <a href="@Url.Action("ThemGioHang", "GioHang", new { ms = sach.Id, url = Request.Url.ToString() })" class="btn btn-primary" role="button">
                             <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Add to Cart
                         </a>
                     </p>
