--- a/TH_LTWeb/Views/Shared/_LayoutUser.cshtml
+++ b/TH_LTWeb/Views/Shared/_LayoutUser.cshtml
@@ -5,6 +5,8 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
     <title>@ViewBag.Title</title>
     <style type="text/css">
         .imgbook {
@@ -12,10 +14,10 @@
             width: 400px;
         }
 
-        .imgbook:hover {
-            transform: scale(0.9);
-            cursor: pointer;
-        }
+            .imgbook:hover {
+                transform: scale(0.9);
+                cursor: pointer;
+            }
 
         .imgsachbannhieu {
             width: 100px;
@@ -23,10 +25,30 @@
     </style>
 </head>
 <body>
+    <div class="navbar navbar-inverse navbar-fixed-top" >
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+               
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav " style="color:white">
+                    <li>@Html.ActionLink("Trang chủ", "Index", "SachOnline")</li>
+                    <li>@Html.ActionLink("Đăng Ký", "DangKy", "User")</li>
+                    <li>@Html.ActionLink("Đăng Nhập", "DangNhap", "User")</li>
+                    <li>@Html.Action("GioHangPartial", "GioHang")</li>
 
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
         @Html.Action("ChuDePartial", "SachOnline")
-        @Html.Action("NhaXuatBanPartial","SachOnline")
+        @Html.Action("NhaXuatBanPartial", "SachOnline")
     </div>
     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
         @RenderBody();
